# legal-tech-microservices

./: AGENTS.md  TOOLS.md
estrado-pjud-service/: .env.example  2026-03-09-competencias-microservicio-pjud.md  pyproject.toml  requirements.txt
estrado-pjud-service/app/: alerting.py  anexo_endpoints.py  auth.py  bandwidth.py  config.py  cookie_store.py  document_downloader.py  errors.py  main.py  metrics.py  minter.py  models.py  proxy.py  r2.py  session.py  session_pool.py
estrado-pjud-service/scripts/: check-scraper-failures.sh  check-worker-health.sh  deploy-worker.sh  fix-env-permissions.sh
estrado-pjud-service/tests/: conftest.py  test_alerting.py  test_anexo_parser.py  test_api_session_pool_cookies.py  test_auth.py  test_backoff.py  test_bandwidth.py  test_config.py  test_cookie_store.py  test_cookie_store_multi.py  test_detail_parser.py  test_detect_blocked_challenge.py  test_document_downloader.py  test_engine.py  test_engine_block_handling.py  test_engine_documents.py  test_familia_auth.py  test_familia_engine.py  test_familia_models.py  test_familia_pool.py  test_familia_routes.py  test_form_builder.py  test_http_adapter_bandwidth.py  test_http_adapter_inject.py  test_integration_proxy_pool.py  test_metrics.py  test_minter.py  test_minter_proxy.py  test_models.py  test_normalizer.py  test_nuevas_competencias.py  test_ops_alert.py  test_parse_suspect.py  test_proxy.py  test_proxy_config.py  test_r2.py  test_rate_limit.py  test_routes.py  test_scheduler.py  test_search_parser.py  (+8 more)
estrado-pjud-service/worker/: __main__.py  backoff.py  config.py  engine.py  (+6 more)
(+55 files in other folders)
